Update ApiController.java
remove deprecated